--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Dribyppalf</title>
+    <title>driB yppalF</title>
 </head>
 
 <body>
-    <h1>Dribyppalf</h1>
+    <h1>Help Miku flap!</h1>
     <canvas id="canvas" width="288" height="512"></canvas>
     <script src="script.js"></script>
 
