Added scoring table, browser compatibility, optimised layout

--- a/index.html
+++ b/index.html
@@ -3,14 +3,58 @@
 <html>
 
 <head>
-    <title>driB yppalF</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>mimimi: home</title>
 </head>
 
 <body>
-    <h1>Help Miku flap!</h1>
-    <canvas id="canvas" width="288" height="512"></canvas>
-    <script src="script.js"></script>
+
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="header">
+            <div class="row align-items-start">
+                <div class="text-center">
+                    <div class='top-column col-lg-12 col-md-12 col-sm-12'>
+
+    					<h1>flappY birD</h1>
+
+				    	<h2>Goal:</h2>
+                        <p>
+				    	Help Miku-chan hop between the black blocks!
+                        </p>
+
+				    	<h2>Controls:</h2>
+                        <p>
+                        W: Small hop
+                        <br>
+                        Spacebar: Big hop
+                        <br>
+                        A: Abort Mission
+                        <br>
+                        D: Kamikaze
+				    	</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<div class="row justify-content-center">
+    <a href="game.html">START</a>
+</div>
+
+</div>
 
 </body>
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </html>
