--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	<title>driB yppalF</title>
+	<title>mimimimi: game</title>
 </head>
 <body>
 
@@ -19,8 +19,12 @@
                 <div class="text-center">
                     <div class='top-column col-lg-12 col-md-12 col-sm-12'>
 
-    <h1>driB yppalF</h1>
-    <canvas id="canvas" width="288" height="512"></canvas>
+                        <h1>flappY birD</h1>
+                        <canvas id="canvas" width="288" height="512"></canvas>
+
+                        <div class="row justify-content-center">
+                        <a href="index.html">MENU</a>
+                        </div>
 	
                     </div>
                 </div>
