--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>mimimi: home</title>
+    <title>mimimi: menu</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
 				    	<h2>Goal:</h2>
                         <p>
-				    	Help Miku-chan hop between the black blocks!
+				    	Help Miku-chan hop between the blocks!
                         </p>
 
 				    	<h2>Controls:</h2>
